<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>norman.tools</groupId>
  <artifactId>tlv2xml</artifactId>
  <version>0.0.6</version>
  <properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <build>
    <resources>
      <resource>
        <directory>src/main/java</directory>
        <excludes>
          <exclude>**/*.java</exclude>
        </excludes>
      </resource>
    </resources>
    <testResources>
    <testResource>
				<directory>${basedir}/src/test/resources</directory>
    </testResource>
    </testResources>
    <plugins>
      <plugin>
				<groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>17</release>
        </configuration>
      </plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.2</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>norman.tools.tlv2xml</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
      </plugins>
  </build>
  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-api</artifactId>
      <version>5.8.2</version>
      <scope>test</scope>
  </dependency>
      <dependency>
  		<groupId>commons-io</groupId>
  		<artifactId>commons-io</artifactId> 
  		<version>2.11.0</version>
  	</dependency>
  </dependencies>
</project>